--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -102,7 +102,14 @@ a {
     }
 }
 
-
+.page-content {
+  a {
+    text-decoration: underline;
+    &:hover {
+      text-decoration:none;
+    }
+  }
+}
 
 /**
  * Blockquotes
