--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -231,17 +231,15 @@ ul li {
  * Posts
  */
 h1 {
-    font-size: 42px;
     letter-spacing: -1px;
     line-height: 1;
     margin-bottom: $spacing-unit;
+    font-size:60px;
+    margin-top:60px;
 
     @include media-query($on-laptop) {
         font-size: 36px;
     }
-    font-size:60px;
-    margin-top:60px;
-
     @include media-query($on-palm) {
         margin-top:5px;
         font-size:30px;
@@ -257,7 +255,7 @@ h1 {
     }
 }
 
-.post-content {
+.post-content, .page-content {
     margin-bottom: $spacing-unit;
 
     h2 {
