--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -119,7 +119,7 @@ blockquote {
     border-left: 4px solid $grey-color-light;
     padding-left: $spacing-unit / 2;
     font-size: 18px;
-    letter-spacing: -1px;
+    letter-spacing: -0.5px;
     font-style: italic;
 
     > :last-child {
@@ -208,4 +208,15 @@ pre {
             fill: $grey-color;
         }
     }
+}
+
+.important-notice {
+  padding: 10px;
+  background-color: #f2dede;
+  border-radius: 4px;
+  border: 1px solid #ebccd1;
+  color: #a94442;
+  font-size: 1.25rem;
+  line-height: 1.6;
+  margin-bottom:10px;
 }
