Adjust padding at top of page

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -199,7 +199,7 @@ ul li {
  * Page content
  */
 .page-content, .post-content {
-    padding: $spacing-unit 0;
+    padding: 0 0 $spacing-unit 0;
 }
 
 .page-heading {
