--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -27,6 +27,9 @@ h6, .hd-xxs {
         font-size: 1.25rem;
         line-height: 1.6;
     }
+    ul li, ol li {
+        font-size: 1.1rem;
+    }
     
 }
 
