--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,17 @@
     </div>
 
     {% include footer.html %}
+    <script src="/bower_components/anchor-js/anchor.min.js"></script>
+    <script>
+      (function () {
+        'use strict';
 
+        anchors.options.placement = 'left';
+
+        anchors.add('.post-content > h2, .post-content > h3, .post-content > h4, .post-content > h5, .post-content > h6');
+
+      })();
+    </script>
   </body>
 
 </html>
