--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -284,6 +284,7 @@ h1 {
 
     h4 {
         font-size: 20px;
+        font-style: italic;
 
         @include media-query($on-laptop) {
             font-size: 18px;
