--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -232,7 +232,7 @@ ul li {
 }
 
 .post-meta {
-    font-size: $small-font-size;
+    font-size: 20px;
     color: $grey-color;
 }
 
@@ -291,6 +291,17 @@ h1 {
             font-size: 18px;
         }
     }
+}
+
+.posts {
+  h2 {
+    margin-bottom: 0px;
+  }
+  h4 {
+    font-style: normal;
+    font-weight: normal;
+    color: #666666;
+  }
 }
 
 nav.sub-nav {
