Restrict TOC column width

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -379,6 +379,7 @@ nav.sub-nav {
   border: 1px solid #eeeeee;
   padding: 8px;
   float: right;
+  width: 350px;
   li {
     list-style-type: none;
     font-size: 1rem;
